--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Update Fortnite Version in AltStore Source
 
 on:
   schedule:
-     - cron: '15,30,45,0 * * * *'
+     - cron: '* * * * *'
   workflow_dispatch:
 
 jobs:
